syntax = "proto3";
package ru.it.lab;
option java_multiple_files = true;

service AdminService {

}